--- a/gb/19/12/30/n11754729.md
+++ b/gb/19/12/30/n11754729.md
@@ -1,12 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wrrxl289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/wrrxl289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/wrrxl289/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wrrxl289/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wrrxl289/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ttfgmz3323/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ttfgmz3323/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ttfgmz3323/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ttfgmz3323/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ttfgmz3323/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>复合式无人机  将成为消防救灾利器</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/1ef7099d8b56b8f990c463b170b12be9-600x400.jpg" />
-<h6>大叶大学环工系主任陈宜清(右)、博士生詹景麟(中)、萧于庭(左)高雄发明展穿金戴银。（大叶大学提供）
-</h6>
+
+<h6></h6>
 <hr>
-<p>【大纪元2019年12月30日讯】（大纪元记者谢五男台湾彰化报导）大叶大学环境工程学系主任陈宜清指导詹景麟、萧于庭、江锦松等3位博士班学生，参加“2019高雄KIDE国际发明暨设计展”，参赛的三件作品，全数获奖，总共荣获2金1银1特别奖的肯定，其中本身是消防弟兄的江锦松设计的“具多功能复合式装置之无人飞行载具”，未来将是火场的<a href="https://github.com/wrrxl289/djy/blob/master/gb/tag/%E5%88%A9%E5%99%A8.md">利器</a>。</p>
+<p>【大纪元2019年12月30日讯】（大纪元记者谢五男台湾彰化报导）大叶大学环境工程学系主任陈宜清指导詹景麟、萧于庭、江锦松等3位博士班学生，参加“2019高雄KIDE国际发明暨设计展”，参赛的三件作品，全数获奖，总共荣获2金1银1特别奖的肯定，其中本身是消防弟兄的江锦松设计的“具多功能复合式装置之无人飞行载具”，未来将是火场的<ahref="https://github.com/ttfgmz3323/djy/blob/master/gb/tag/%E5%88%A9%E5%99%A8.md#1">利器</a>。</p>
 <p>大叶大学环工系博士班学生詹景麟研发的“越南腰果果托田间加工与再利用”，这项研发技术是荣获金牌。詹景麟表示，去年他前往越南参观朋友农场时，无无意间吃到腰果的果托，觉得很好吃。不过当地农民通常是采完腰果后就将果托就地丢弃，他觉得很可惜。因为本身是就读环工系，就想到如何将别人不要的东西回收加以资源化，所以就引发这项创意。因为果托本身有微毒，所以是利用发酵方法将果托的外皮与浆果分开处理。</p>
 <p>另外，环工系博士生江锦松设计的“具多功能复合式装置之无人飞行载具”，也是获得金牌，目前已经申请专利。</p>
 <p>江锦松说，国内近来传出多起工厂大火造成消防人员伤亡的不幸事件，因为他本身是消防弟兄，他觉得最根本原因是救火时常因火场状况不明造成消防人员的伤亡。</p>
@@ -17,38 +16,44 @@
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/30/n11754729.htm">复合式无人机  将成为消防救灾利器</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725027.htm">【内幕】中共如何将全球港口和商船变武器</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11748836.htm">跨年夜演出献给高雄 李玖哲预告“有惊喜”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11746326.htm">美军联络官进驻 联兵营成现代劲旅的十建议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11746467.htm">澳洲禁区内飞行无人机将面临罚款或监禁</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741897.htm">观看玫瑰花车游行全攻略</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738898.htm">国防授权法聚焦中共 美防长：集中应对中俄</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741242.htm">2020年将被淘汰的九款车 含一款丰田车</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753643.htm">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753606.htm">白宫：若朝鲜试射远程导弹 美将采取行动</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725027.htm">【内幕】中共如何将全球港口和商船变武器</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11745932.htm">《推背图》第45象 预言中共气数已尽</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741785.htm">《兰亭序》异彩绝代 书法家赞天下第一行书</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740590.htm">1979年 孙运璿《对共匪最近各种统战活动的严正声明》</a></li>
-> <li><a href="http://www.epochtimes.com/gb/10/3/31/n2863214.htm">四十七年历经七死七生  罪尽福至</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11750678.htm">夏小强：台总统候选人政见会结束 大势已定</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11751714.htm">【新闻看点】危机来了？官称过紧日子及防暴动</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11751566.htm">中共两省军区政委突然被免全国人大代表资格</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11752481.htm">平安夜不平安 港急救员：“生于乱世有责任”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743340.htm">【罗厨寻味】面团焗鸡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11749711.htm">【新闻看点】美中经济两重天 川普：与习签协议</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11750726.htm">2019全球百大美女揭榜 周子瑜获选第一美</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/28/n11751142.htm">2019全球百大帅哥排行榜由柾国夺冠 韩星占两成</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11753643.htm">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11749809.htm">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/29/n11752296.htm">老鹰闯入鸡舍想大快朵颐 不料反被鸡群围殴</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/16/n11725027.md#1">【内幕】中共如何将全球港口和商船变武器</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/22/n11738898.md#1">国防授权法聚焦中共 美防长：集中应对中俄</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/24/n11741897.md#1">观看玫瑰花车游行全攻略</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/26/n11746326.md#1">美军联络官进驻 联兵营成现代劲旅的十建议</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/26/n11746467.md#1">澳洲禁区内飞行无人机将面临罚款或监禁</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/27/n11748836.md#1">跨年夜演出献给高雄 李玖哲预告“有惊喜”</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243884.md#1">微笑天使爱上日月潭 代言净山完登三岳认证</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243446.md#1">毕业季征才  900缺薪资6万元等着您</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243450.md#1">“邮农关怀情” 彰化邮局公益捐赠弱势活动</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/9/n12243459.md#1">价逾二千万巨幅画作 正在建国科大展示</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wrrxl289/djy/blob/master/gb/19/12/30/n11754729.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wrrxl289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wrrxl289/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wrrxl289/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10799353.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（1）</a></li><li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240778.md#1">日籍女生染疫 台湾采检213人抗体 结果出炉</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242681.md#1">【新闻看点】A股飙升内幕 金融战下的布局？</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241760.md#1">中芯国际股价暴涨暴跌 中共撒钱难掩窘境</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239433.md#1">复出不顺转当网红？范冰冰抖音昵称引热议</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12237412.md#1">收6岁女儿送玫瑰花茶 孙俪直呼舍不得喝</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12241972.md#1">乐视退市 中国半个娱乐圈明星血本无归</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12242228.md#1">邓紫棋拿麦克风飙高音 罩中的玻璃杯瞬间炸裂</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/7/n12239842.md#1">黄秋生叹港片艰难 吁观众撑《死因无可疑》</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/6/n12236101.md#1">纵横破解：预言与人生（下）</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/3/n12230158.md#1">绘画中的瘟疫——罪与罚的故事（一）</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/7/8/n12240967.md#1">溺水时灵魂出窍 小女孩看见自己的身体</a></li>
+<li><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/20/5/27/n12140713.md#1">【中国礼仪文化】见面礼仪之叉手礼</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ttfgmz3323/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ttfgmz3323/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/30/n11754729.htm">复合式无人机  将成为消防救灾利器</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ttfgmz3323/djy/blob/master/gb/19/12/30/n11754729.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ttfgmz3323/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ttfgmz3323/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ttfgmz3323/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ttfgmz3323/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
